PROJECT (cppunit)
CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

SET(INSTALL_BIN_DIR "${CMAKE_INSTALL_PREFIX}/bin" 
    CACHE PATH "Installation directory for executables")
SET(INSTALL_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib" 
    CACHE PATH "Installation directory for libraries")
SET(INSTALL_INC_DIR "${CMAKE_INSTALL_PREFIX}/include" 
    CACHE PATH "Installation directory for headers")


FILE(GLOB CPPUNIT_SRC RELATIVE "${CMAKE_CURRENT_SOURCE_DIR}"
    "${CMAKE_CURRENT_SOURCE_DIR}/src/cppunit/*.cpp")
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/include)


SET(DLLPLUGINTESTER_SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/DllPlugInTester/CommandLineParser.cpp
                        ${CMAKE_CURRENT_SOURCE_DIR}/src/DllPlugInTester/DllPlugInTester.cpp
                        )
INCLUDE_DIRECTORIES(${CMAKE_CURRENT_SOURCE_DIR}/src/DllPlugInTester)

IF(BUILD_SHARED_LIBS)
    ADD_LIBRARY(cppunit SHARED ${CPPUNIT_SRC})
    ADD_DEFINITIONS(-DCPPUNIT_BUILD_DLL)
ELSE(BUILD_SHARED_LIBS)
    add_library(cppunit STATIC ${CPPUNIT_SRC})
ENDIF(BUILD_SHARED_LIBS)

ADD_EXECUTABLE(DllPlugInTester ${DLLPLUGINTESTER_SRC})
TARGET_LINK_LIBRARIES(DllPlugInTester cppunit)


INSTALL(TARGETS cppunit
        RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
        ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
        LIBRARY DESTINATION "${INSTALL_LIB_DIR}" )
INSTALL(TARGETS DllPlugInTester 
        RUNTIME DESTINATION "${INSTALL_BIN_DIR}")
INSTALL(DIRECTORY "${PROJECT_SOURCE_DIR}/include/cppunit" 
        DESTINATION "${INSTALL_INC_DIR}")

