CMAKE_MINIMUM_REQUIRED(VERSION 2.6)

PROJECT(tetgen)

SET(INSTALL_BIN_DIR "${CMAKE_INSTALL_PREFIX}/bin")
SET(INSTALL_LIB_DIR "${CMAKE_INSTALL_PREFIX}/lib")
SET(INSTALL_INC_DIR "${CMAKE_INSTALL_PREFIX}/include")

SET(TETGEN_SRCS predicates.cxx tetgen.cxx)
SET(TETGEN_INC tetgen.h)

if(MSVC)
  ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
ENDIF(MSVC)

ADD_EXECUTABLE(tetgen ${TETGEN_SRCS})

ADD_LIBRARY(tetlib STATIC ${TETGEN_SRCS})
SET_TARGET_PROPERTIES(tetlib PROPERTIES COMPILE_FLAGS "-DTETLIBRARY")

INSTALL(TARGETS tetgen tetlib
        RUNTIME DESTINATION "${INSTALL_BIN_DIR}"
        ARCHIVE DESTINATION "${INSTALL_LIB_DIR}"
        LIBRARY DESTINATION "${INSTALL_LIB_DIR}" )
INSTALL(FILES ${TETGEN_INC} DESTINATION "${INSTALL_INC_DIR}")
